# moldyn

./: .gitignore  LICENSE  README.md  cd  pyproject.toml
data/.datreant/: categories.json  tags.json
docs/: conf.py  contents.rst  index.rst  processing.rst  requirements.txt  simulation.builder.rst  simulation.compute_forces.rst  simulation.rst  simulation.runner.rst  utils.rst
moldyn/: __init__.py  main.py
moldyn/data/: atom_preset.py
moldyn/processing/: data_proc.py  strain.glsl  strain_CPU.py  visualisation.py
moldyn/simulation/: builder.py  forces_CPU.py  forces_GPU.py  runner.py
moldyn/simulation/templates/: moldyn.glsl
moldyn/ui/: _conv.py  create_model.py  define_external_forces.py  draggableLine.py  edit_model.py  main.py  mainwindow.py  model_viewer.py  species_params.py
moldyn/ui/qt/: create_model.py  create_model.ui  define_external_forces.py  define_external_forces.ui  edit_model.py  edit_model.ui  mainwindow.py  mainwindow.ui  make.bat  species_params.py  species_params.ui
moldyn/utils/: data_mng.py  dummy.glsl  fcntl.py  gl_util.py  types.py
